WiseUpTi-SalesForce/Wise Up Sales Force/src/objects/Pricebook2.object
<CustomObject>
    <fields>
        <fullName>Id_Ometznet__c</fullName>
        <externalId>true</externalId>
        <label>Id Ometznet</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Negocio__c</fullName>
        <label>Negócio</label>
        <picklist>
            <picklistValues>
                <fullName>Wise Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>meuSucesso.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Publico__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Quando público, este catálogo de preços poderá ser utilizado em qualquer oportunidade. Se não for público, só poderá ser usado nas unidades em que este catálogo está definido.</inlineHelpText>
        <label>Público</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>Todas</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <label>Todas</label>
    </listViews>
    <listViews>
        <fullName>Wise_Up</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Negocio__c</field>
            <operation>equals</operation>
            <value>Wise Up</value>
        </filters>
        <label>Wise Up</label>
    </listViews>
    <listViews>
        <fullName>meusucesso_com</fullName>
        <columns>PRICEBOOK2.NAME</columns>
        <columns>PRICEBOOK2.DESCRIPTION</columns>
        <columns>PRICEBOOK2.LAST_UPDATE</columns>
        <columns>PRICEBOOK2.IS_ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Negocio__c</field>
            <operation>equals</operation>
            <value>meusucesso.com</value>
        </filters>
        <label>meusucesso.com</label>
    </listViews>
    <sharingModel>ReadSelect</sharingModel>
</CustomObject>